fix parallax overlappings

--- a/src/styles/pages/Home.css
+++ b/src/styles/pages/Home.css
@@ -16,6 +16,9 @@
   -webkit-background-clip: text;
 }
 
+.Home_animatedWordWrapper {
+  transition: opacity 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
 .Home h2 {
   font-weight: bold;
   font-size: 48px;
